images load now

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@1,2&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <!-- Preload key images -->
+    <link rel="preload" href="/src/assets/anitracker/image1.jpg" as="image">
+    <link rel="preload" href="/src/assets/anitracker/image2.jpg" as="image">
+    <link rel="preload" href="/src/assets/anitracker/image3.jpg" as="image">
+    <link rel="preload" href="/src/assets/leetcode/image1.jpg" as="image">
+    <link rel="preload" href="/src/assets/leetcode/image2.jpg" as="image">
+    <link rel="preload" href="/src/assets/leetcode/image3.jpg" as="image">
+    <link rel="preload" href="/src/assets/truthordrink/image1.jpg" as="image">
+    <link rel="preload" href="/src/assets/truthordrink/image2.jpg" as="image">
+    <link rel="preload" href="/src/assets/truthordrink/image3.jpg" as="image">
   </head>
   <body>
     <div id="root"></div>
