fix: improve performance

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link rel="preload" href="/src/assets/truthordrink/image1.jpg" as="image">
     <link rel="preload" href="/src/assets/truthordrink/image2.jpg" as="image">
     <link rel="preload" href="/src/assets/truthordrink/image3.jpg" as="image">
+    <!-- Preload dynamically-rendered background smoke images to improve LCP -->
+    <link rel="preload" href="/assets/bigSmoke.webp" as="image">
+    <link rel="preload" href="/assets/midSmoke.webp" as="image">
+    <link rel="preload" href="/assets/tinySmoke.webp" as="image">
   </head>
   <body>
     <div id="root"></div>
